# K8-Service-Function-Chaining-with-SDN

./: README.md
Forwarder/Alpine/: Dockerfile
Forwarder/Ubuntu/: Dockerfile  forward_from_eth1_to_eth2.py  forward_from_eth2_to_eth1.py  forwarder.py
ONOS Libraries/aletest/: BUILD.bazel
ONOS Libraries/aletest/src/main/java/org/onosproject/aletest/: aleTrafficRedirect.java  installRulesTask.java
Sender/Alpine/: Dockerfile
Sender/Ubuntu/: Dockerfile
Utilities/: DockerCleanup.sh  buildimages.sh  dumpflowsbr0.sh  dumpflowsbr1.sh  removeimages.sh  scenarioBpings.sh  scenarioCpings.sh  scenarioDpings.sh  scenarios.sh
